@startuml
'https://plantuml.com/sequence-diagram

class Main
class Building
class Room

Main *-- Room
Main *-- Building
Building *-- Room

Main : + static void main(String[] args)
Main : + static int countLampsInBuilding(Building building)
Main : + static boolean isNormal(Building building)

Building : - final ArrayList<Room> rooms
Building : - int numberOfBathrooms;
Building : - int numberOfFloors;
Building : - boolean isOfficeBuilding;
Building : + Building(ArrayList<Room> rooms, int numberOfBathrooms, int numberOfFloors, boolean isOfficeBuilding)
Building : + ArrayList<Room> getRooms()
Building : + int getNumberOfBathrooms()
Building : + int getNumberOfFloors()
Building : + boolean getIsOfficeBuilding(){

Room : - int numberOfDoors;
Room : - int numberOfLamps;
Room : - int numberOfWindows;
Room : + Room(int numberOfDoors, int numberOfLamps, int numberOfWindows)
Room : + int getNumberOfDoors()
Room : + int getNumberOfLamps()
Room : + int getNumberOfWindows()


@enduml